
[project]
name = "jb"
version = "0.1.0"
description = ""
authors = [
    {name = "yoblee", email = "yoblee@gmail.com"},
]
dependencies = [
    "jupyter-book>=0.15.1",
    "matplotlib>=3.7.1",
    "pydata-sphinx-theme>=0.13.3",
    "sphinx-rtd-theme>=1.2.2",
    "pandas>=2.0.2",
    "pymysql>=1.0.3",
    "bokeh>=3.1.1",
    "folium>=0.14.0",
    "seaborn>=0.12.2",
    "jupyter>=1.0.0",
    "opendata>=0.0.1",
    "opendata-kr>=0.0.8",
    "openpyxl>=3.1.2",
    "sphinx-press-theme>=0.8.0",
    "sphinxawesome-theme>=5.0.0b2",
    "jupytext>=1.14.6",
    "notebook==7.0.0b4",
    "jupyter-nbextensions-configurator>=0.6.3",
    "jupyter-contrib-nbextensions>=0.7.0",
    "ghp-import>=2.1.0",
    "sphinxemoji>=0.2.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

