
[project]
name = "tdc"
version = "0.1.0"
description = ""
authors = [
    {name = "gritism", email = "yoblee@gmail.com"},
]
dependencies = [
    "jupyter>=1.0.0",
    "jupyter-book>=0.15.1",
    "myst-parser>=0.18.1",
    "pandas>=2.0.2",
    "seaborn>=0.12.2",
    "bokeh>=3.1.1",
    "opendata-kr>=0.0.8",
    "furo>=2023.3.27",
    "sphinx-press-theme>=0.8.0",
    "piccolo-theme>=0.16.0",
    "sphinx-material>=0.0.35",
    "sphinxawesome-theme>=4.1.0",
    "jupytext>=1.14.6",
    "openpyxl>=3.1.2",
    "sphinx-typo3-theme>=4.7.10",
    "bulma-sphinx-theme>=0.2.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
PDM_IGNORE_ACTIVE_VENV = "false"

[tool.jupytext]
formats = "ipynb, _md/_/.md"
